[tool.poetry]
name = "hanazeder_server"
version = "0.1.2"
description = "A server that reads energy and sensor data from a Hanazeder FP pump control system and publishes it to MQTT. Automatically creates Home Assistant topics."
authors = ["Kevin Read <me@kevin-read.com>"]
license = "Apache Software License"

[tool.poetry.dependencies]
python = "^3.7"
asyncio-mqtt = "^0.12.1"
hanazeder = "1.2.0"
quart = "^0.18.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/unverbraucht/hanazeder_server"

[project.scripts]
hanazeder_server = "hanazeder_server.mqtt:main"

[tool.semantic_release]
version_variable = [
    "hanazeder_server/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install pipenv && python3 -m build"
# commit_parser = "semantic_release.history.scipy_parser"